--- a/ar_pop_demo/index.html
+++ b/ar_pop_demo/index.html
@@ -13,6 +13,7 @@
     <div id="mapid"></div>
     <script src="ar-counties.js"></script>
     <script src="population.js"></script>
+    <script src="covid_numbers.js"></script>
     <script src="map.js"></script>
   </body>
 </html>
