added d3 and graph

--- a/ar_pop_demo/index.html
+++ b/ar_pop_demo/index.html
@@ -1,4 +1,5 @@
 <html>
+  <meta charset="utf-8">
   <head>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -8,12 +9,19 @@
       integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
       crossorigin=""></script>
     <link rel="stylesheet" href="styles.css"/>
+    <script src="https://d3js.org/d3.v4.js"></script>
   </head>
   <body>
+    <div style="display:flex;justify-content:space-around">
+      <h1 id="tot_cases">Total Cases:</h1>
+      <h1 id="tot_deaths">Total Deaths:</h1>
+    </div>
     <div id="mapid"></div>
+    <div id="chart"></div>
     <script src="ar-counties.js"></script>
     <script src="population.js"></script>
     <script src="covid_numbers.js"></script>
     <script src="map.js"></script>
+    <script src="graph.js"></script>
   </body>
 </html>
